completed changes to responsive css.  Main changes are in how the restaurant details page is handled on mobile view.  Map is fixed to top of mobile browser and restaurant details and review are scrolled over top of the map.

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -144,7 +144,7 @@ nav h1 a {
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px auto 15px auto;
-  padding: 0 30px 25px;
+  padding: 30px 30px 25px;
   text-align: left;
   max-width: 375px;
   width: 80%;
@@ -152,9 +152,8 @@ nav h1 a {
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
-  margin: 0;
   max-width: 100%;
-  min-width: 100%;
+  min-width: 150px;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -185,100 +184,116 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 #breadcrumb li {
-    display: inline;
-  }
+  display: inline;
+}
 
-  .inside header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-  }
-  .inside #map-container {
-    background: blue none repeat scroll 0 0;
-    height: 75%;
-    position: fixed;
-    top: 0px;
-    width: 100%;
-  }
-  .inside #map {
-    background-color: #ccc;
-    height: 100%;
-    width: 100%;
-  }
-  .inside #footer {
-    bottom: 0;
-    position: relative;
-    width: 100%;
-  }
-  #restaurant-name {
-    color: #f18200;
-    font-family: Arial,sans-serif;
-    font-size: 20pt;
-    font-weight: 200;
-    letter-spacing: 0;
-    margin: 15px 0 30px;
-    text-transform: uppercase;
-    line-height: 1.1;
-  }
-  #restaurant-img {
-    width: 90%;
-  }
-  #restaurant-address {
-    font-size: 12pt;
-    margin: 10px 0px;
-  }
-  #restaurant-cuisine {
-    background-color: #333;
-    color: #ddd;
-    font-size: 12pt;
-    font-weight: 300;
-    letter-spacing: 10px;
-    margin: 0 0 20px;
-    padding: 2px 0;
-    text-align: center;
-    text-transform: uppercase;
-    width: 90%;
-  }
-  #restaurant-container, #reviews-container {
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 0px 40px 30px;
-    width: 100%;
-    position: relative;
-    top: 510px;
-  }
+.inside header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+.inside #map-container {
+  background: blue none repeat scroll 0 0;
+  height: 75%;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+}
+.inside #map {
+  background-color: #ccc;
+  height: 100%;
+  width: 100%;
+}
+.inside #footer {
+  bottom: -510px;
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+#restaurant-name {
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 20pt;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 15px 0 15px;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1.1;
+  width: 90%
+}
+#restaurant-img {
+  width: 90%;
+}
+#restaurant-address {
+  font-size: 12pt;
+  margin: 10px;
+}
 
-  #reviews-container {
-    padding: 30px 40px 80px;
-  }
+#restaurant-hours{
+  margin-bottom:  10px;
+  width: 90%;
+} 
 
-  #reviews-container h2 {
-    color: #f58500;
-    font-size: 24pt;
-    font-weight: 300;
-    letter-spacing: -1px;
-    padding-bottom: 1pt;
-  }
-  #reviews-list {
-    margin: 0;
-    padding: 0;
-  }
-  #reviews-list li {
-    background-color: #fff;
-      border: 2px solid #f3f3f3;
-    display: block;
-    list-style-type: none;
-    margin: 0 0 30px;
-    overflow: hidden;
-    padding: 0 20px 20px;
-    position: relative;
-    width: 85%;
-  }
-  #reviews-list li p {
-    margin: 0 0 10px;
-  }
-  #restaurant-hours td {
-    color: #666;
-  }
+#colDay{
+  min-width: 100px;
+}
+
+#restaurant-cuisine {
+  background-color: #333;
+  color: #ddd;
+  font-size: 12pt;
+  font-weight: 300;
+  letter-spacing: 10px;
+  margin: 0;
+  padding: 2px 0;
+  text-align: center;
+  text-transform: uppercase;
+  width: 90%;
+}
+#restaurant-container, #reviews-container {
+  align-items: center;
+  background: #fff;
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0;
+  position: relative;
+  top: 510px;
+  width: 100%;
+}
+
+#reviews-container h2 {
+  color: #f58500;
+  font-size: 24pt;
+  font-weight: 300;
+  letter-spacing: -1px;
+  margin: 20px 0 0 0;
+  padding-bottom: 1pt;
+  text-align: left;
+}
+
+#reviews-list {
+  margin: auto;
+  padding:0;
+  width: 100%;
+}
+
+#reviews-list li {
+  background-color: #fff;
+  border: 2px solid #f3f3f3;
+  display: block;
+  list-style-type: none;
+  margin: 10px auto 10px auto;
+  overflow: hidden;
+  padding: 0 10px 0 10px;
+  position: relative;
+  width: 80%;
+}
+
+#restaurant-hours td {
+  color: #666;
 }
